--- a/movies/templates/movies/movies.html
+++ b/movies/templates/movies/movies.html
@@ -6,9 +6,10 @@
     <body>
     <hi>Movies</hi>  
     <ul>  
-        {%for movies in movies%}
-        <li>{{movies.title}}</li>
+        {%for movie in movies%}
+        <li><a href={{movie.id}}>{{movie.title}}</a></li>
         {% endfor %}
     </ul>
+    <a href= '/movies/add'>Add a Movie</a>
     </body>
 </html>
