--- a/movies/templates/movies/add.html
+++ b/movies/templates/movies/add.html
@@ -1,8 +1,7 @@
-<form action="/movies/add" method="POST">
-    <label for="title">Movie title</label>
-    <input type="text" name="Title" id="title" placeholder="Movie title">
-    <input type "submit" value="Add">
-
-
-
+<form action ='/movies/add' method='POST'>
+    {% csrf_token %} 
+    
+    <input type='text' name='title' id='title' placeholder='Movie title'>
+    <input type='text' name='year' id='year'placeholder= 'Movie year'>
+    <button type="submit" value="Add "> Add</button>
 </form>
